attempt to fix link spacing and brand color to secondary pt 2 scss

--- a/bootstrap5/scss/custom.scss
+++ b/bootstrap5/scss/custom.scss
@@ -2,5 +2,7 @@ $primary: #232D4B;
 $secondary: #E57200;
 $link-color: #E57200;
 $link-hover-color: #E57200;
+$navbar-brand-color: #E57200;
+$navbar-brand-hover-color: #E57200;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
